# decision-trail

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.claude/commands/: decide.md  marmite.md  trail.md
.github/workflows/: profile.yml
decisions/digests/: 2026-03-31-session-2.md
examples/: 001-python-over-typescript.md  002-rich-over-custom-renderer.md  003-click-over-argparse.md
src/decision_trail/: __init__.py  cli.py  digest.py  extractor.py  git.py  metrics.py  models.py  profile.py  renderer.py  templates.py  viewer.py
src/decision_trail/templates/: base.css  profile.html.j2  profile.md.j2
