[metadata]
name = decision-trail
version = 0.1.0
description = Show your thinking, not just your code. Capture human decisions during AI-assisted development.
license = MIT
author = Elliot Little

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.0
    rich>=13.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    decision-trail = decision_trail.cli:cli
